# Email-Assistant

./: .gitignore  .prettierrc.js  biome.json  config-overrides.js  forge.config.js  package-lock.json  package.json  tailwind.config.js
Rust_API/: .gitignore  Cargo.toml  ashland_api.darwin-arm64.node  index.d.ts  index.js  package.json
Rust_API/npm/darwin-arm64/: README.md  package.json
Rust_API/src/: lib.rs  queries.rs
Rust_API/src/queries/: auctions.rs  types.rs
Rust_API/src/queries/auctions/: get_recent.rs
Rust_API/src/queries/types/: auction.rs  dynamic_field.rs  filter.rs  graphql_query.rs  lots.rs  order.rs  pagination.rs  response_data.rs  variables.rs
public/: egg.html  logo.icns  logoicns.icns  main.js  preload.js
src/: App.js  App.jsx  apiCalls.js  constants.js  extendTheme.js  index.css  index.js
src/components/: Auction.jsx  HTMLConvert.jsx  ProgressBar.jsx  Search.jsx  SideBar.jsx
src/components/Newsletter/: DateSection.jsx  Footer.jsx  HeaderLogo.jsx  HeaderNav.jsx  Newsletter.jsx  NewsletterAuction.jsx  UpcomingRow.jsx
src/electron/: main.js  preload.js  preload.mjs
src/hooks/: useApollo.js  useDownloadProgress.js  useKeySequence.js  useSalesforce.js
src/lib/: checkForUpdates.js  utils.js
src/pages/: Email.jsx  Home.jsx  Home.style.css  Preview.jsx  Reschedule.jsx  SearchShow.jsx  Settings.jsx
src/providers/: AuthProvider.js
src/queries/: emptyQuery.graphql.js  getAuctionLot.graphql.js  getRecentlySoldAuctions.graphql.js  getScheduledAuctions.graphql.js  index.js
src/store/: updateStore.js  userStore.js
(+27 files in other folders)
